Fix vertical alignment of button tag

--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -26,7 +26,7 @@
 	background: 	  -o-linear-gradient(top, #f5f5f5 0%, #f1f1f1 100%); /* Opera 11.10+ */
 	background: 		-webkit-gradient(linear, left top, left bottom, color-stop(0%, #f5f5f5), color-stop(100%, #f1f1f1)); /* Chrome,Safari4+ */
 	background: 		 linear-gradient(to bottom, #f5f5f5 0%, #f1f1f1 100%); /* W3C */
-		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#f1f1f1', GradientType=0); /* IE6-8 */
+			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#f1f1f1', GradientType=0); /* IE6-8 */
 	border: 1px solid rgb(211, 211, 211);
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	border-radius: 3px;
@@ -45,7 +45,9 @@
 
 .btn SPAN {
 	font: inherit/1.385em 'Open Sans', sans-serif !important;
-	vertical-align: top
+	display: block;
+	line-height: 2.000em;
+	vertical-align: middle
 }
 
 .btn:hover {
@@ -65,11 +67,6 @@ A.btn {
 	INPUT[type="button"].btn,
 	INPUT[type="submit"].btn {
 		padding-bottom: 2px
-	}
-
-	.btn SPAN {
-		display: block;
-		margin-bottom: 2px
 	}
 
 }
